cmake_minimum_required(VERSION 3.2)
project(tgbdual C CXX)
function(create_test_target target_name)
    set(OTHER_FILES "")
    foreach(f ${ARGN})
        set(OTHER_FILES ${OTHER_FILES} ${f})
    endforeach()
    add_test(${target_name} ${target_name})
    add_executable(${target_name} test/${target_name}.t.cpp ${OTHER_FILES})
    target_include_directories(${target_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/include)
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/gtest/include)
    target_compile_features(${target_name} PRIVATE cxx_lambdas cxx_aggregate_default_initializers)

    target_link_libraries(${target_name} gtest gtest_main)
endfunction()

enable_testing()

add_subdirectory(gb_core)
add_subdirectory(tgbdual_desktop)
add_subdirectory(sdl_adapters)
add_subdirectory(sfml_adapters)
add_subdirectory(dummy_adapters)
add_subdirectory(script_layer)
add_subdirectory(wrenvm)
add_subdirectory(luavm)
add_subdirectory(gtest)